# vertex-oai-py

./: .gitignore  README.md  README_EN.md  config.yaml  main.py  pyproject.toml  test_api.py  tmp.md
py_src/: app.py  config.py  main.py
