[project]
name = "vertex-oai-my"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "google-auth>=2.49.2",
    "google-cloud-aiplatform>=1.147.0",
    "httpx>=0.28.1",
    "litellm>=1.83.7",
    "python-daemon>=3.1.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
